Hoàn thiện thêm các chức năng